--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "@fastify/formbody": "^7.4.0",
     "@fastify/view": "^8.2.0",
+    "@fastify/redis": "^6.1.1",
     "ejs": "^3.1.9",
-    "fastify": "^4.24.3",
-    "fastify-redis": "^4.4.0"
+    "fastify": "^4.24.3"
   }
 }
